<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_button_text">Remove</string>
    <string name="settings_text">settings</string>
    <string name="favorite_text">favorite</string>
    <string name="home_text">Home</string>
    <string name="alerts">alerts</string>
    <string name="language_text">Language</string>
    <string name="english_language_text">English</string>
    <string name="arabic_language_text">Arabic</string>
    <string name="temperature_text">Temperature</string>
    <string name="celsius_text">Celsius</string>
    <string name="kelvin_text">Kelvin</string>
    <string name="fahrenheit_text">Fahrenheit</string>
    <string name="save_text">Save</string>
    <string name="wind_speed_text2">Wind speed</string>
    <string name="humidity_text">Humidity</string>
    <string name="pressure_text">Pressure</string>
    <string name="rain_chance">Rain chance</string>
    <string name="Alert_Title">Confirmation</string>
    <string name="alert_description">Are you sure you want to remove this location</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="notification_text">Notification</string>
    <string name="alarm_text">Alarm</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="location_settings">Location Setting</string>
    <string name="GPS">GPS</string>
    <string name="maps">Map</string>
    <string name="no_chance">No Chance</string>
    <string name="details_text">Details</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="day_forecast">Day Forecast</string>
    <string name="temp_unit">°c</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="item_count">Item Count</string>
    <string name="no_item">No Items</string>
</resources>